Improve screenshot generator using Selenium and headless Chrome